# AI-Based-Product-Decision-System

./: .gitignore  .gitlab-ci.yml  PROJECT.docx  README-CICD.md  README.md  dashboard.html  feedback.html  login.html  package-lock.json  register.html  reports.html  server.js
backend/: .env.example  .gitignore  CHANGELOG.md  DATA_INGESTION.md  README.md  check_api.py  check_db.py  cluster_analysis.db  dataset.ipynb  debug_import.py  fixed_run.py  minimal_run.py  pyproject.toml  requirements-ci.txt  requirements.txt  run.py  setup.py  start_server.bat  test.py  test_api.py  test_imports.py  test_ingestion.py  test_integration.py  test_persistence.py  test_pipeline.py  test_sync_demo.py
backend/app/: __init__.py  main.py
backend/app/models/: cluster_analysis.py  ingestion.py
backend/app/services/: clustering_service.py  data_filter_service.py  embedding_service.py  ingestion_service.py  llm_service.py  persistence_service.py  pipeline_service.py  preprocessing_service.py  sampling_service.py  sentiment_service.py
backend/app/workers/: tasks.py
backend/config/: __init__.py  config.py
backend/docs/: AUTOMATED_SYNC.md  DATA_INGESTION.md  MLFLOW_EXPERIMENT_LOGGING.md  STRUCTURE.md
backend/scripts/: run_mlflow_experiments.py
backend/src/: __init__.py
backend/src/review_clustering/: main.py
backend/src/review_clustering/connectors/: __init__.py  app_store_connector.py  base_connector.py  generic_api_connector.py  google_play_connector.py
backend/src/review_clustering/models/: cluster_analysis.py  ingestion.py  sync_models.py
backend/src/review_clustering/services/: clustering_service.py  data_filter_service.py  experiment_tracking_service.py  ingestion_service.py  persistence_service.py  pipeline_service.py  priority_service.py  sampling_service.py  scheduler_service.py  sync_service.py  trend_service.py
backend/src/review_clustering/workers/: tasks.py
backend/tests/: __init__.py  test.py  test_complete_system.py  test_ingestion.py  test_persistence.py
frontend/: clusters.html  dashboard.html  feedback.html  ingestion.html  login.html  package-lock.json  package.json  register.html  reports.html  server.js  settings.html
frontend/Landing page/Voice2Value-master/: package-lock.json  package.json  tailwind.config.js
frontend/Landing page/Voice2Value-master/src/: App.css  App.jsx  App.tsx  DashboardRouter.jsx  FloatingLines.css  Form.css  Form.jsx  Signup.jsx  dashboard.css  styles.css
frontend/Landing page/Voice2Value-master/src/components/: CTASection.tsx  CodeFixSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navbar.tsx  ProblemSection.tsx
frontend/Landing page/Voice2Value-master/src/components/ui/: background-beams.tsx  google-gemini-effect.tsx
