[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-clustering"
version = "1.0.0"
description = "Production-grade Python application for clustering and analyzing customer reviews using machine learning and NLP"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Organization", email = "your.email@example.com"},
]
keywords = [
    "clustering",
    "nlp",
    "sentiment-analysis",
    "machine-learning",
    "reviews",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Business and Finance",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "Flask>=2.3.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "hdbscan>=0.8.0",
    "scikit-learn>=1.2.0",
    "numpy>=1.24.0",
    "spacy>=3.5.0",
    "nltk>=3.8.0",
    "vaderSentiment>=3.3.0",
    "python-dotenv>=1.0.0",
    "APScheduler>=3.10.0",
    "requests>=2.31.0",
    "pandas>=1.5.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12.0",
]
prod = [
    "gunicorn>=21.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/review-clustering"
Documentation = "https://github.com/yourusername/review-clustering/tree/main/docs"
Repository = "https://github.com/yourusername/review-clustering.git"
"Bug Tracker" = "https://github.com/yourusername/review-clustering/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["review_clustering*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/review_clustering"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
